sucessfully finished building get income api and unsucessfully tried to stop thinking if there is hidden meaning behind your last commit

--- a/public/css/_income.scss
+++ b/public/css/_income.scss
@@ -1,3 +1,7 @@
+#income-buttons-container {
+	display: flex;
+}
+
 .income-button {
 	display: block;
 	display: flex;
