--- a/public/css/_onboarding.scss
+++ b/public/css/_onboarding.scss
@@ -18,49 +18,7 @@ h3.onboarding-label {
 	color: darken($secondary, 20%)
 }
 
-//Networth page
 
-#asset-buttons-container {
-	display: flex;
-	flex-wrap: wrap;
-
-		figcaption {
-			text-align: center;
-			font-size: 1.5rem;
-		}
-
-}
-
-.asset-button {
-	display: block;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	border: 4px $secondary solid;
-	border-radius: 5px;
-	padding: 15px;
-	margin: 10px;
-	background: lighten($secondary,10%);
-	opacity: 0.9;
-	height: 110px;
-	width: 110px;
-
-		img {
-			display: block;
-			max-height: 30px;
-			display: none;
-		}
-
-		figcaption {
-			color: black;
-		}
-
-}
-
-.asset-button:hover {
-	background: lighten($secondary, 20%)
-}
 
 
 
